gcc/testsuite/rust/rustc/ui/type/ascription/issue-47666.rs
// run-rustfix
fn main() {
    let _ = Option:Some(vec![0, 1]); // { dg-error "" "" { target *-*-* } }
}

